assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer&family=Reenie+Beanie&display=swap');
*{
    margin:0;
    padding: 0;
    border: none;
}
body{
    font-family: Reenie Beanie, sans-serif;
    font-weight: 400;
    color: #131a17;
}
p {  
    font-family: Reenie Beanie, sans-serif;
    font-size: 30px;
    margin-left: 10px;

}

/* heading and logo */
h1, h2 {
    font-family: IM Fell Great Primer, sans-serif;
    text-transform: uppercase;
    text-shadow: 2px 2px 2px #eedde5;
    letter-spacing: 2px;
    color: #131a17;
}
h2{
    font-size:2em;
}
#logo{
    float:left;
    font-size: 300%;
    margin-right:20px;
    margin-left: 20px;
}
#logo-image{
    height: 48px;
}
#menu{
    text-transform: uppercase;
    font-family: Reenie Beanie, sans-serif;
    letter-spacing: 2px;
    float: right;
    margin-top: 24px;

}
#menu li{
    float: right;
    list-style-type: none;
    margin-right: 20px;
}
#menu a{
    text-decoration: none;
    color: #131a17;
}
#menu a:hover{
    border-bottom: 2px solid #131a17;
}
.active{
    border-bottom: 2px solid #131a17;
}

/*about me section*/ 
#crochet-background-about-me-section{
    width: 100%;
    background-image: linear-gradient(0deg, rgba(203, 204, 205, 0.6), rgba(203, 204, 205, 0.6)), url(../images/background-aboutme-section.jpg);
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
    padding-bottom: 20px;
}
#mypicture{
    border-radius: 100%;
    width: 200px;
    object-fit: cover;
    object-position: 100% 0%;
    height: 200px;
    margin-top: 20px;
}

/* basics section*/
#basics{
    margin-top: 30px;
    margin-bottom: 30px;
}
#basics-subsection{
    display:flex;
    gap: 20px;
}

#basics > h2{
    text-align:center;
    margin-top: 10px;
    margin-bottom: 10px;
}

#tools{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#tools > ul {
    font-size: 30px;
    margin-top: 10px;
    list-style-type: square;
    max-width: 80%;
}
#stitches{
    display: flex;
    flex-direction: column;
    align-items: center;
}
#stitches > ul{
    font-size: 30px;
    margin-top: 10px;
    list-style-type: square;
    max-width: 80%;

}

/*Templates section*/
#templates{
    display: flex;
    justify-content: center;
    gap: 10px;
}

#templates div{
    color: #131a17;
    height: 500px;
    background-repeat: no-repeat;
    background-position: center;
    padding: 10px;
}
#templates ol{
    color:#131a17;
    margin-left: 30px;
    font-size: 30px;
    
}

#scarf{
    background: linear-gradient(0deg, rgba(203, 204, 205, 0.6), rgba(203, 204, 205, 0.6)), url('../images/wrap-gallery9.jpeg');
    
}
#snowman{
    background-image: linear-gradient(0deg, rgba(203, 204, 205, 0.6), rgba(203, 204, 205, 0.6)), url('../images/snowman.jpeg');

}
#blanket{
    background-image: linear-gradient(0deg, rgba(203, 204, 205, 0.6), rgba(203, 204, 205, 0.6)), url('../images/blanket.jpeg');
}

/*footer section*/
footer {
    text-align: center;
    margin-top: 20px;
    font-size: 30px;
}

footer ul li {
    display: inline;
}
footer i {
    color:#131a17;
    
}
.fa-facebook {
    color: rgb(111, 177, 167)
}
.fa-twitter {
    color: rgb(215, 164, 204)
}
.fa-instagram {
    color: rgb(225, 212, 194);
}

/* gallery */
#gallery{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: 450px 450px 450px;
    grid-gap: 15px;
    clear: both;
    margin: 100px;
}

.gallery-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#coffee-cake{
    grid-column-end: span 2;
}
#spaghetti-amigurumi{
    grid-column-end: span 2;
}

/*form*/
form{
    margin: 50px 250px;

}

fieldset{
    border: 1px solid #131a17;
    padding: 20px;
    margin-bottom: 20px;
    font-size: 30px;
}

input{
    padding: 10px;
    border: 1px solid #131a17;
}
#form-intro{
    display: flex;
    flex-direction: column;
    align-items: center;
}
#get-in-touch-section{
    clear: both;
}

/* media queries*/
@media screen and (max-width: 1200px) {

    fieldset{
        display: flex;
        flex-direction: column;
    }
    
}
@media screen and (max-width: 800px) {
    #templates{
        flex-direction: column;
    }

    #gallery{
        grid-template-columns: repeat(3, 1fr);
        margin: 50px;
    }

    #coffee-cake{
        grid-column-end: auto;
    }
    #spaghetti-amigurumi{
        grid-column-end: auto;
    }

    form{
        margin: 50px 50px;
    }
    
}

@media screen and (max-width: 480px) {
    #basics{
        height: auto;
    }
    #basics-subsection{
        flex-direction: column;
    }
    #tools{
        float:none;
        width:auto;
        align-items:flex-start;
        margin-left: 30px;
    }

    #stitches{
        float:none;
        width:auto;
        align-items:flex-start;
        margin-left: 30px;
    
    }

    #gallery{
        grid-template-columns: repeat(1, 1fr);
        margin: 10px;
    }
    form{
        margin: 50px 20px;
    }
}

